tests/baselines/reference/nullAssignedToUndefined(strict=true).errors.txt
nullAssignedToUndefined.ts(1,9): error TS2539: Cannot assign to 'undefined' because it is not a variable.
nullAssignedToUndefined.ts(2,5): error TS2322: Type 'null' is not assignable to type 'undefined'.


==== nullAssignedToUndefined.ts (2 errors) ====
    var x = undefined = null; // error
            ~~~~~~~~~
!!! error TS2539: Cannot assign to 'undefined' because it is not a variable.
    var y: typeof undefined = null; // ok, widened
        ~
!!! error TS2322: Type 'null' is not assignable to type 'undefined'.